Fix: swap action and subject in the ActionRequest

--- a/pom.xml
+++ b/pom.xml
@@ -117,4 +117,6 @@
         </pluginManagement>
     </build>
 
+    <!-- mvn assembly:assembly -DdescriptorId=jar-with-dependencies package -->
+
 </project>
